# particle-life

./: .gitignore  Cargo.toml  README.md
assets/shaders/: particle_compute.wgsl
src/: globals.rs  main.rs
src/components/: mod.rs
src/components/entities/: food.rs  mod.rs  particle.rs  simulation.rs
src/components/genetics/: genotype.rs  mod.rs  score.rs
src/plugins/: mod.rs
src/plugins/core/: camera.rs  mod.rs  setup.rs
src/plugins/simulation/: compute.rs  mod.rs  simulation.rs  visualizer.rs
src/plugins/ui/: ui_plugin.rs
src/resources/config/: food.rs  mod.rs  particle_types.rs  simulation.rs
src/resources/world/: boundary.rs  camera.rs  grid.rs  mod.rs
src/states/: app.rs  mod.rs  simulation.rs
src/systems/: lifecycle.rs  mod.rs
src/systems/persistence/: mod.rs  population_save.rs
src/systems/rendering/: camera.rs  mod.rs  viewport_manager.rs  viewport_overlay.rs
src/systems/simulation/: collision.rs  mod.rs  physics.rs  reset.rs  spawning.rs  visualizer_spawning.rs
src/ui/: mod.rs
src/ui/dialogs/: mod.rs  save_population.rs
src/ui/menus/: main_menu.rs  mod.rs  visualizer_menu.rs
src/ui/panels/: force_matrix.rs  mod.rs
