[package]
name = "gpu-particle-life"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.34.1"
rand = "0.9.1"
bytemuck = "1.23.1"
flume = "0.11.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.141"
bevy_spatial = "0.11.0"
bevy_app_compute = "0.16.0"

[profile.release]
codegen-units = 1
lto = "thin"
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
